Update paths for new zipped drive folder to fix MOM6 layer COM files

--- a/notebooks/file-pointers/load-files.ipynb
+++ b/notebooks/file-pointers/load-files.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3c9fe51e-5b1e-429e-ada3-3cc906f0411f",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "17c963ce-6d99-4a08-9bd7-18f2c6bbf0c6",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
     "## folder where the isomip-plus github repo is located\n",
     "baserepo = '/g/data/x77/cy8964/isomip-plus/'\n",
     "## folder where you downloaded the zipped Google Drive data\n",
-    "basedrive = '/scratch/x77/cy8964/ISOMIP+Data/'\n",
+    "basedrive = '/g/data/x77/cy8964/ISOMIP+Data-new/'\n",
     "\n",
     "# load the data from the text files, which point to the right location of the file in the drive structure\n",
     "Ocean0_COM = np.loadtxt(baserepo+'notebooks/file-pointers/Ocean0-COM.txt', dtype = 'str', delimiter = ',',usecols = 0)\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e641886b-c8e0-45f1-a5ad-1658ef63dd21",
    "metadata": {},
    "outputs": [
@@ -64,9 +64,9 @@
       "loaded!\n",
       "MITgcm-JPL/Ocean0-2 COM/Ocean0_COM_MITgcm_JPL.nc\n",
       "loaded!\n",
-      "MOM6/Ocean0-2 COM/Ocean0_COM_MOM6_SIGMA_ZSTAR.nc\n",
+      "MOM6_SIGMA_ZSTAR/Ocean0-2 - COM/Ocean0_COM_MOM6_SIGMA_ZSTAR.nc\n",
       "loaded!\n",
-      "MOM6/Ocean0-2 TYP/Ocean0_TYP_MOM6.nc\n",
+      "MOM6/Ocean0-2 COM/Ocean0_COM_MOM6.nc\n",
       "loaded!\n",
       "MPAS-Ocean/Ocean0-2 COM/Ocean0_COM_MPAS-Ocean.nc\n",
       "loaded!\n",
@@ -88,9 +88,9 @@
       "loaded!\n",
       "MITgcm-JPL/Ocean0-2 COM/Ocean1_COM_MITgcm_JPL.nc\n",
       "loaded!\n",
-      "MOM6/Ocean0-2 COM/Ocean1_COM_MOM6_SIGMA_ZSTAR.nc\n",
+      "MOM6_SIGMA_ZSTAR/Ocean0-2 - COM/Ocean1_COM_MOM6_SIGMA_ZSTAR.nc\n",
       "loaded!\n",
-      "MOM6/Ocean0-2 TYP/Ocean1_TYP_MOM6.nc\n",
+      "MOM6/Ocean0-2 COM/Ocean1_COM_MOM6.nc\n",
       "loaded!\n",
       "MPAS-Ocean/Ocean0-2 COM/Ocean1_COM_MPAS-Ocean.nc\n",
       "loaded!\n",
@@ -112,9 +112,9 @@
       "loaded!\n",
       "MITgcm-JPL/Ocean0-2 COM/Ocean2_COM_MITgcm_JPL.nc\n",
       "loaded!\n",
-      "MOM6/Ocean0-2 COM/Ocean2_COM_MOM6_SIGMA_ZSTAR.nc\n",
+      "MOM6_SIGMA_ZSTAR/Ocean0-2 - COM/Ocean2_COM_MOM6_SIGMA_ZSTAR.nc\n",
       "loaded!\n",
-      "MOM6/Ocean0-2 TYP/Ocean2_TYP_MOM6.nc\n",
+      "MOM6/Ocean0-2 COM/Ocean2_COM_MOM6.nc\n",
       "loaded!\n",
       "MPAS-Ocean/Ocean0-2 COM/Ocean2_COM_MPAS-Ocean.nc\n",
       "loaded!\n",
@@ -215,9 +215,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:analysis3-23.04] *",
+   "display_name": "Python [conda env:analysis3-24.04]",
    "language": "python",
-   "name": "conda-env-analysis3-23.04-py"
+   "name": "conda-env-analysis3-24.04-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -229,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
