Updated header message in OSF plot notebook

--- a/notebooks/overturning-streamfunction/OverturningStreamfunction.ipynb
+++ b/notebooks/overturning-streamfunction/OverturningStreamfunction.ipynb
@@ -11,10 +11,7 @@
     "\n",
     "It also shows how you can open the files in python.\n",
     "\n",
-    "Xylar also has many plotting and data processing scripts in the Google Drive, including checking for anomalous data structures.\n",
-    "\n",
-    "**Issues**: \n",
-    "- MOM6 layer looks different to Xylar's versions."
+    "Xylar also has many plotting and data processing scripts in the Google Drive, including checking for anomalous data structures."
    ]
   },
   {
