--- a/notebooks/file-pointers/load-files.ipynb
+++ b/notebooks/file-pointers/load-files.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "3c9fe51e-5b1e-429e-ada3-3cc906f0411f",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "17c963ce-6d99-4a08-9bd7-18f2c6bbf0c6",
    "metadata": {},
    "outputs": [],
@@ -206,8 +206,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "id": "12bedf35-e220-48f1-b94d-adf96c7a63ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os.path\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "5fa4e14e-cee6-47ec-8f51-504ff6827127",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['COCO', 'FVCOM', 'MITgcm-BAS', 'MITgcm-BAS-Coupled', 'MITgcm-JPL', 'MOM6-SIGMA-ZSTAR', 'MOM6-LAYER', 'MPAS-Ocean', 'NEMO-CNRS', 'NEMO-UKESM1is', 'POP2x', 'ROMS']\n",
+      "['FVCOM', 'MOM6-LAYER', 'MPAS-Ocean', 'NEMO-CNRS-TYPa', 'NEMO-CNRS-TYPb', 'NEMO-UKESM1is', 'POP2x', 'ROMS', 'ROMS-tides']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_labels(expt):\n",
+    "    '''\n",
+    "    Get labels of experiments\n",
+    "    Make some modifications to names\n",
+    "    '''\n",
+    "    labels = []\n",
+    "    for fileIndex in range(len(expt)):\n",
+    "        fileName = expt[fileIndex]\n",
+    "        baseName = os.path.basename(basedrive +fileName)\n",
+    "        modelName = ' '.join(baseName.split('_')[2:]).split('.')[0]\n",
+    "        if \"COM\" in fileName:\n",
+    "            #make edits to COM names\n",
+    "            if \"MOM6\" in fileName:\n",
+    "                if \"SIGMA_ZSTAR\" not in fileName:\n",
+    "                    modelName = modelName + '-LAYER'\n",
+    "            elif \"ROMS\" in fileName:\n",
+    "                modelName = \"ROMS\"\n",
+    "        elif \"TYP\" in fileName:\n",
+    "            # make edits to COM names\n",
+    "            if \"MOM6\" in fileName:\n",
+    "                modelName = modelName + '-LAYER'\n",
+    "            elif \"CNRS\" in fileName:\n",
+    "                if \"TYPa\" in fileName:\n",
+    "                    modelName = modelName + '-TYPa'\n",
+    "                elif \"TYPb\" in fileName:\n",
+    "                    modelName = modelName + '-TYPb'\n",
+    "            elif \"tides\" in fileName:\n",
+    "                modelName = \"ROMS-tides\"\n",
+    "            elif \"ROMS\" in fileName:\n",
+    "                modelName = \"ROMS\"\n",
+    "        labels.append(modelName.strip('V3').replace(\" \", \"-\"))\n",
+    "    return labels\n",
+    "\n",
+    "print(get_labels(Ocean1_COM))\n",
+    "print(get_labels(Ocean1_TYP))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "48aac65d-2534-44f8-a279-d847f559d93f",
+   "id": "f1b9a6f0-bbe5-466e-80e6-6790550bffab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -229,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
